add link to faucet

--- a/src/footer/footer.html
+++ b/src/footer/footer.html
@@ -13,6 +13,9 @@
 					<li class="nav-item" role="presentation">
 						<a class="nav-link bg-transparent d-flex flex-column justify-content-center align-items-center gap-1 fs-6 pt-3 pb-3" type="button" role="tab" href="#send"><i class="fa-solid fa-paper-plane"></i>Send</a>
 					</li>
+					<li class="nav-item" role="presentation">
+						<a class="nav-link bg-transparent d-flex flex-column justify-content-center align-items-center gap-1 fs-6 pt-3 pb-3" type="button" role="tab" target="_blank" href="https://faucet.bitgesell.app"><i class="fa-solid fa-faucet"></i>Faucet</a>
+					</li>
 					<!-- <li class="nav-item" role="presentation">
 						<a class="nav-link bg-transparent d-flex flex-column justify-content-center align-items-center gap-1 fs-6 pt-3 pb-3" type="button" role="tab" href="https://bglswap.com" target="_blank"><i class="fa-solid fa-rotate"></i>Swap</a>
 					</li> -->
