--- a/src/main/main.html
+++ b/src/main/main.html
@@ -10,6 +10,7 @@
 						<ul class="navbar-nav text-uppercase gap-5" id="menu-items">
 							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="#my-addresses">My addresses</a></li>
 							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="#send">Send</a></li>
+							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" target="_blank" href="https://faucet.bitgesell.app">Faucet</a></li>
 							<!-- <li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="https://bglswap.com" target="_blank">Swap</a></li> -->
 						</ul>
 						<form class="mb-0">
