add favicon & og tag

--- a/src/header/header.html
+++ b/src/header/header.html
@@ -5,4 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
 		<link rel="stylesheet" href="./assets/themes/lumen.min.css" id="theme">
 
+		<link rel="shortcut icon" href="./assets/favicon.ico">
+		<meta name="description"
+		content="Discover the best open source, secure, cross-platform Bitgesell DApps — Wallet, Bridge, Explorer, SDK and more for power users and devs!">
+		<meta name="author" content="Bitgesell.App">
+		<meta property="og:image:width" content="1200">
+		<meta property="og:image:height" content="1200">
+		<meta property="og:title" content="BGL Wallet">
+		<meta property="og:description"
+			content="Best open source, secure, cross-platform Bitgesell DApps — Wallet, Bridge, Explorer, SDK and more for power users and devs!">
+		<meta property="og:image" content="./assets/og-image.jpg">
+		<meta property="og:url" content="https://app.bglwallet.io">
+
 		<title>Bitgesell Wallet</title>
