ui improve - goodbye cheerful colors

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -9,7 +9,7 @@
 				<label for="login-password">Your wallet local password (not seed words):</label>
 				<div class="input-group">
 					<input type="password" class="form-control form-control-lg" id="login-password" name="password" required="" autocomplete="current-password">
-					<button class="btn btn-info toggle-password" type="button"><i class="fas fa-eye"></i></button>
+					<button class="btn btn-outline-info toggle-password" type="button"><i class="fas fa-eye"></i></button>
 				</div>
 			</div>
 			<button type="submit" class="btn btn-success btn-lg">Open your Bitgesell Wallet</button>
