--- a/src/my-addresses/my-addresses.html
+++ b/src/my-addresses/my-addresses.html
@@ -5,7 +5,7 @@
 			<a class="btn btn-success" href="#new-address">Add new address</a>
 		</div>
 		<div class="col d-flex justify-content-end">
-			<button class="btn btn-info float-right" id="import-address-btn">Import address</button>
+			<button class="btn btn-outline-info float-right" id="import-address-btn">Import address</button>
 		</div>
 	</div>
 
